# Research-Agent-reinforced-by-RL

./: .env.example  LICENSE  Plan_of_attack.md  README.md  presentation.md  proof_of_concept.ipynb  requirements.txt
.github/workflows/: ci.yml  eval_AI.yml
.ipynb_checkpoints/: README-checkpoint.md
RL_researcher_writer/: .mcp.json  README.md  requirements.txt
RL_researcher_writer/research_agent_remote/: docker-compose.yml  docker-entrypoint.sh
RL_researcher_writer/writing_workflow/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
RL_researcher_writer_ymaxing/: .env.example  .gitattributes  .gitignore  .mcp.json  Makefile  README_PACKAGE.md  evak_offline_metrics.ipynb  eval_offline_dataset.ipynb  pyproject.toml
RL_researcher_writer_ymaxing/research_agent_local/training/: _batch_training_set.json  _batch_training_set_results.json  _batch_training_set_results_v2.json  _batch_training_set_results_v3.json  _check_03_scores.py  _eval_run2_v2_analysis.txt  _eval_run2_v2_ordinal_distance.txt  _oracle_prior_review.txt  analyze_dataset.py  analyze_eval_results.py  compute_article_oracle.py  eval_accuracy.py  fix_medium_and_hippo.py  generate_digests.py  infer.py  propagate_shared_queries.py  pyproject.toml  recompute_oracle_with_prior.py  regen_research_md.py  repair_failed_scrapes.py  repair_missing_tavily_queries.py  restore_deleted_scrapes.py  rl_data_generator.py  run_tavily_06_tools_replacement.py  test_meta_reasoner.py  train_grpo.py
agents_integration_local/: .env.example  composed_server_script.py
writing_workflow/: .env.example
(+805 files in other folders)
