[project]
name = "rl-training"
version = "0.1.0"
description = "GRPO + QLoRA training for exploration strategy selection"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.5.0",
    "transformers>=4.51.0",
    "peft>=0.15.0",
    "bitsandbytes>=0.45.0",
    "accelerate>=1.5.0",
    "tensorboard>=2.19.0",
    "setuptools>=82.0.1",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
